chore: add docs/implementation-plan/ to .gitignore
Implementation planning documents are for internal use during
development and should not be committed to the repository.
This directory will contain:
- Master implementation plan
- Phase checklists (3 phases)
- Reference extracts from OneRedOak workflows
- Work in progress notes

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ test-output/
 scratch/
 temp/
 tmp/
+docs/implementation-plan/
 
 # Keep remedy prompts and documentation
 !REMEDY_*.md
@@ -49,3 +50,4 @@ venv/
 env/
 __pycache__/
 *.pyc
+/temp/
