feat: fix update workflow validation to prevent incomplete agent/command creation
Major enhancements to ensure all agents, commands, and features are properly
created/updated in update mode:

VALIDATION WORKFLOW IMPROVEMENTS:
- Replace narrative validation reports with mechanical YAML-like checklists
- Add "Authoritative Sources" section forcing validators to read core-agents.md,
  phase-4-commands.md, etc.
- Add 3 ABORT_VALIDATION flags that force hard stops if critical items missing
- Add Agent 4 Feature Structure Validator for story migration verification
- Add Phase 3.5 Hard Verification Checkpoints with 6 bash commands

EXPLICIT AGENT/COMMAND LISTS:
- Phase 3: Explicitly list all 13 core agents (not "12 core + custom")
- Phase 4: Explicitly list all 12 core commands (not "11+ commands")
- Add critical distinction between /yolo (config) and /dev-yolo (execution)
- Both commands now explicitly listed as separate items

STORY MIGRATION AUTOMATION:
- Create migrate-stories.sh script for automated migration from old locations
  to docs/development/features/[feature]/epics/[epic]/stories/
- Support dry-run mode for safe testing
- Include rollback capability

DOCUMENTATION:
- UPDATE-WORKFLOW-FIX-PLAN.md: Root cause analysis and fix specifications
- MECHANICAL-VALIDATION-SPEC.md: How validators must return structured data
- STORY-MIGRATION-GUIDE.md: Step-by-step migration process with automation
- FINAL-COMPLETION-REPORT.md: Comprehensive verification report

FIXES ROOT CAUSES:
✓ Vague validator instructions → Mechanical checklists with exact counts
✓ No hard stop enforcement → ABORT_VALIDATION flags with 3 validators
✓ Conflicting story locations → Migration guide + automation script
✓ /dev-yolo ambiguity → Separate items with CRITICAL DISTINCTION section
✓ Missing mechanical verification → Phase 3.5 with 6 bash checkpoints

Files Modified:
- prompts/update-mode/validation-workflow.md (752 lines, +118)
- prompts/phases/phase-3-agents.md (137 lines, explicit 13 agents)

--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,11 @@ __pycache__/
 *.pyc
 /temp/
 
-docs/**
+# Ignore implementation-plan and other docs directories
+docs/implementation-plan/
+
+# BUT allow these specific documentation files
+!docs/UPDATE-WORKFLOW-FIX-PLAN.md
+!docs/MECHANICAL-VALIDATION-SPEC.md
+!docs/STORY-MIGRATION-GUIDE.md
+!docs/FINAL-COMPLETION-REPORT.md
