refactor(prompts): major reorganization of setup and update flows
Replaced the single meta-prompt with three distinct entry points: setup.md, update-setup.md, and prepare-setup.md.

- Introduced a script-based approach (sync-loom-files.sh) for setting up and updating user projects.
- Reorganized all workflow prompts into new, role-specific directories: prompts/setup, prompts/update-setup, and prompts/prepare-setup.
- The update-setup flow is now more robust, including a structure-validator agent to non-destructively update user-owned files like status.xml.
- Moved old orchestrator prompts to a .gitignored backup/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ __pycache__/
 
 # Ignore only implementation-plan directory (keep docs/development/)
 docs/implementation-plan/**/*
+\n# Backup directory for old prompts\nbackup/
