--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,5 @@ __pycache__/
 /temp/
 
 # Ignore only implementation-plan directory (keep docs/development/)
-docs/implementation-plan/**/*
-\n# Backup directory for old prompts\nbackup/
+docs/**/*
+skill_test_bench/**/*
